--- a/49paskaita-02.28-useEffect/src/App.css
+++ b/49paskaita-02.28-useEffect/src/App.css
@@ -86,6 +86,7 @@ body{
             flex-wrap: wrap;
             gap: 5px;
             padding: 0;
+            width: 16rem;
             > li {
                 border: 1px solid grey;
                 padding: 2px 5px;
@@ -146,13 +147,14 @@ form {
     display: flex;
     flex-direction: column;
     align-content: center;
-    background-color: rgba(240, 240, 240, 0.999);
+    background-color: rgba(225, 225, 225, 0.999);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 10px;
     > input[type='text'], input[type='url'], input[type='number'], textarea {
         width: 100%;
         padding: 5px;
         border-radius: 5px;
-        border: 1px solid grey;
+        /* border: 1px solid grey; */
+        border: none;
     }
     > div {
         margin-bottom: 1rem;
