--- a/50paskaita-02.29-BandWeb/src/App.css
+++ b/50paskaita-02.29-BandWeb/src/App.css
@@ -1,260 +1,368 @@
-@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap');
+@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
 :root {
-    --background-color: #1a1a1a;
-    --card-color: #2e2e2e;
-    --red: #950f0d;
-    --yellow: #f9dc01;
+  --background-color: #1a1a1a;
+  --card-color: #2e2e2e;
+  --red: #950f0d;
+  --yellow: #f9dc01;
 }
 
 .yellow {
-    color: var(--yellow);
+  color: var(--yellow);
 }
 .grey {
-    color: grey;
-    font-size: 0.9rem;
+  color: grey;
+  font-size: 0.9rem;
 }
 .red {
-    color: var(--red);
+  color: var(--red);
 }
+button {
+  padding: 0.4rem 1rem;
+  background-color: var(--yellow);
+  border: none;
+  margin: 0;
+  color: black;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  &:hover {
+    background-color: #ffec60;
+    transform: scale(1.1);
+  }
+}
+input[type='submit'] {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    &:hover {
+        background-color: #ffec60;
+        transform: scale(1.1);
+      }
+}
+
 body {
-    font-family: "Oswald", sans-serif;
-    background-color: var(--background-color);
-    padding-bottom: 10rem;
+  font-family: "Oswald", sans-serif;
+  background-color: var(--background-color);
 }
 
 main {
-    > :first-child {
-        color: white;
-        font-size: 2rem;
-        margin-left: 2rem;
-        margin-bottom: 0;
-        &:hover {
-            color: var(--yellow);
-            cursor: pointer;
-        }
+  padding: 0 5%;
+  > p:first-child {
+    color: white;
+    font-size: 2rem;
+    margin-bottom: 0;
+    &:hover {
+      color: var(--yellow);
+      cursor: pointer;
     }
+  }
 }
 header {
-    height: 5rem;
-    background: url('https://cdn.audioaddict.com/rockradio.com/assets/header-bg-5a3266e90a33f1c2319c66fb0c11460796743d6c226338411995d8ff33edec70.png') repeat-x 0 0 transparent;
-    background-size: contain;
-    color: white;
-    border-bottom: 1px solid #1a1a1a;
+  height: 5rem;
+  background: url("https://cdn.audioaddict.com/rockradio.com/assets/header-bg-5a3266e90a33f1c2319c66fb0c11460796743d6c226338411995d8ff33edec70.png")
+    repeat-x 0 0 transparent;
+  background-size: contain;
+  color: white;
+  border-bottom: 1px solid #1a1a1a;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 5%;
+  > img {
+    height: 80%;
+  }
+  > div {
     display: flex;
-    justify-content: space-between;
-    padding: 1rem 5%;
+    align-items: center;
+    gap: 2rem;
     > img {
-        height: 80%;
+      height: 4rem;
+      width: 4rem;
+      object-fit: cover;
+      border-radius: 50%;
     }
-    > div {
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-        > img {
-            height: 4rem;
-            width: 4rem;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-        > p {
-            font-size: 1.5rem;
-            text-shadow: 1px 1px 1px rgba(0,0,0,0.75);
-            font-weight: 400;
-        }
+    > p {
+      font-size: 1.5rem;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+      font-weight: 400;
     }
+  }
 }
 
 .bandForm {
-    padding: 5%;
-    color: white;
-    > form {
-        width: 30rem;
-        text-align: right;
-        > input, textarea {
-            padding: 0.5rem;
-            background-color: transparent;
-            border: none;
-            border-bottom: 1px solid rgb(227, 227, 227);
-            width: 100%;
-            margin-bottom: 1rem;
-            font-size: 1.2rem;
-            color:white;
-            &:focus {
-                outline: none;
-                border-bottom: 1px solid var(--red); 
-            }
-        }
-        > textarea {
-            height: 1.6rem;
-        }
-        > input[type='submit'] {
-            width: unset;
-            padding: 0.4rem 1rem;
-            background-color: var(--yellow);
-            border: none;
-            margin: 0;
-            color: black;
-            cursor: pointer;
-            &:hover {
-                background-color: #ffec60;
-            }
-        }
+  color: white;
+  > form {
+    width: 30rem;
+    margin: 1rem 0;
+    > div {
+      align-self: center;
     }
+  }
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  > textarea,
+  input:not([type="submit"]):not([type="radio"]) {
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid white;
+    min-width: 20rem;
+    font-size: 1.2rem;
+    color: white;
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid var(--yellow);
+    }
+  }
+  > textarea {
+    height: 1.6rem;
+  }
+  > div {
+    margin-top: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    input[type="radio"] {
+      display: none;
+    }
+    label {
+      cursor: pointer;
+      padding: 0.3rem 1rem;
+      background-color: var(--card-color);
+      color: white;
+      transition: background-color 0.3s ease;
+
+    }
+    input[type="radio"]:checked + label {
+      background-color: var(--yellow);
+      color: black;
+    }
+  }
+  > input[type="submit"] {
+    align-self: center;
+    margin-top: 1rem;
+    padding: 0.4rem 1rem;
+    background-color: var(--yellow);
+    border: none;
+    color: black;
+    cursor: pointer;
+    &:hover {
+      background-color: #ffec60;
+    }
+  }
+}
+
+#editBandForm {
+  color: black;
+  textarea {
+    color:black;
+    border-bottom: 1px solid black;
+  }
+  > h1 {
+    margin-left: 2rem;
+    margin-bottom: 0;
+  }
 }
 
 .bandCardContainer {
-    margin: 4rem 5%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 3rem;
-    justify-content: space-evenly;
+  margin: 4rem 5%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: space-evenly;
 }
 .bandCard {
-    box-sizing: border-box;
-    padding: 16px;
-    display: inline-block;
-    background-color: var(--card-color);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    position: relative;
-    width: 300px;
-    > img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
+  box-sizing: border-box;
+  padding: 1rem 1rem 2.5rem;
+  display: inline-block;
+  background-color: var(--card-color);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  position: relative;
+  width: 300px;
+  > img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  > .bandInfo {
+    color: white;
+    > :first-child {
+      font-size: 1.4rem;
+      margin: 0.4rem 0;
     }
-    > .bandInfo {
-        color: white;
-        > :first-child {
-            font-size: 1.4rem;
-            margin: 0.4rem 0;
-        }
-        > .mainInfo {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            > p {
-                margin: 0.5rem 0;
-                border: 1px solid white;
-                padding: 2px 3px;
-            }
-        }
-        .members {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 5px;
-        }
+    > .mainInfo {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      > p {
+        margin: 0.5rem 0;
+        border: 1px solid white;
+        padding: 2px 3px;
+      }
     }
-
+    .members {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+    }
+  }
 }
-p{
-    z-index: 5;
-    position: relative;
+p {
+  z-index: 5;
+  position: relative;
 }
 .bandInfo {
-    background-color: var(--card-color);
-    position: relative;
+  background-color: var(--card-color);
+  position: relative;
 }
 
 .bandInfo::before {
-    content: "";
-    position: absolute;
-    top: -15px; /* Adjust the slope height */
-    left: 0;
-    right: 0;
-    bottom: 100%;
-    height: 3rem;
-    background: inherit; /* Inherit the background color of the div */
-    transform: skewY(7deg); /* Adjust the angle of the slope */
-    transform-origin: top right;
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: -15px; /* Adjust the slope height */
+  left: 0;
+  right: 0;
+  bottom: 100%;
+  height: 3rem;
+  background: inherit; /* Inherit the background color of the div */
+  transform: skewY(7deg); /* Adjust the angle of the slope */
+  transform-origin: top right;
+  z-index: 1;
 }
 
-.fa-face-grin-hearts {
-    position: absolute;
-    background-color: #1a1a1a95;
-    font-size: 3rem;
-    top: -1.5rem;
-    right: 1rem;
-    border-radius: 50%;
-    padding: 0.4rem;
-    &:hover {
-        transform: scale(1.2);
-        /* color:var(--yellow); */
-        cursor: pointer;
-        /* border:2px solid var(--yellow); */
-    }
+.fa-face-grin-hearts, .fa-frown {
+  position: absolute;
+  background-color: #1a1a1a95;
+  font-size: 3rem;
+  top: -1.5rem;
+  right: 1rem;
+  border-radius: 50%;
+  padding: 0.4rem;
+  &:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
 }
 
 .yellowIcon {
-    border:2px solid var(--yellow);
-    color: var(--yellow);
+  border: 2px solid var(--yellow);
+  color: var(--yellow);
 }
 .greyIcon {
-    border:2px solid grey;
-    color: grey;
+  border: 2px solid #909090;
+  color: #909090;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    color: white;
-    background-color:#2e2e2eb3;
-    padding: 1rem 0;
+  position: relative;
+  bottom: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  color: white;
+  background-color: #2e2e2eb3;
+  padding: 1rem 0;
+  > div {
+    flex-basis: 40%;
     > div {
-        flex-basis: 40%;
-        > div {
-            display: flex;
-            gap: 1rem;
-            align-items: center;
-            > img {
-                height: 4rem;
-            }
-            > span {
-                font-size: 2rem;
-                text-shadow: 1px 1px 1px rgba(0,0,0,0.75);
-                font-weight: 400;
-            }
-        }
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      > img {
+        height: 4rem;
+      }
+      > span {
+        font-size: 2rem;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+        font-weight: 400;
+      }
     }
-    > ul {
-        display: flex;
-        list-style: none;
-        gap: 2rem;
-        > li > i {
-            color: var(--yellow);
-            font-size: 2rem;
-            &:hover {
-                cursor: pointer;
-                color: var(--red);
-            }
-        }
+  }
+  > ul {
+    display: flex;
+    list-style: none;
+    gap: 2rem;
+    > li > i {
+      color: var(--yellow);
+      font-size: 2rem;
+      &:hover {
+        cursor: pointer;
+        color: var(--red);
+      }
     }
-    > p > a {
-        color: white;
-        text-underline-offset: 5px;
-    }
-}
-
-.fa-square-plus, .fa-square-minus {
-    margin-right: 1rem;
-}
-
-.fa-trash-can {
+  }
+  > p > a {
     color: white;
+    text-underline-offset: 5px;
+  }
+}
+
+.fa-square-plus,
+.fa-square-minus {
+  margin-right: 1rem;
+}
+.iconContainer {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
     position: absolute;
-    right: 1rem;
     bottom: 1rem;
+    right: 1rem;
+}
+.fa-trash-can {
+  color: white;
+  font-size: 1.3rem;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.2);
+    color: var(--yellow);
+  }
+}
+.fa-edit {
+    color: white;
     font-size: 1.3rem;
     cursor: pointer;
     &:hover {
-        transform: scale(1.2);
+      transform: scale(1.2);
+      color: var(--yellow);
+    }
+}
+.fa-right-from-bracket {
+  font-size: 1.5rem;
+  color: var(--yellow);
+  cursor: pointer;
+  &:hover {
+    color: white;
+  }
+}
+
+.fa-user-circle {
+  color: var(--yellow);
+  font-size: 3rem;
+}
+
+dialog {
+  background-color: white;
+  /* position: relative; */
+  form {
+    padding: 2rem;
+    > input:not([type="submit"]) {
+        border-bottom: 1px solid var(--card-color) !important;
+        color: black !important;
+    }
+    > input::placeholder {
+        color: rgb(136, 136, 136);
+    }
+  }
+  i {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    &:hover{
         color: var(--yellow);
     }
+  }
 }
