--- a/50paskaita-02.29-BandWeb/src/App.css
+++ b/50paskaita-02.29-BandWeb/src/App.css
@@ -45,7 +45,7 @@ body {
   background-color: var(--background-color);
 }
 
-main {
+/* main {
   padding: 0 5%;
   > p:first-child {
     color: white;
@@ -56,8 +56,8 @@ main {
       cursor: pointer;
     }
   }
-}
-header {
+} */
+/* header {
   height: 5rem;
   background: url("https://cdn.audioaddict.com/rockradio.com/assets/header-bg-5a3266e90a33f1c2319c66fb0c11460796743d6c226338411995d8ff33edec70.png")
     repeat-x 0 0 transparent;
@@ -86,7 +86,7 @@ header {
       font-weight: 400;
     }
   }
-}
+} */
 
 .bandForm {
   color: white;
@@ -171,7 +171,7 @@ form {
   gap: 3rem;
   justify-content: space-evenly;
 }
-.bandCard {
+/* .bandCard {
   box-sizing: border-box;
   padding: 1rem 1rem 2.5rem;
   display: inline-block;
@@ -206,7 +206,7 @@ form {
       gap: 5px;
     }
   }
-}
+} */
 p {
   z-index: 5;
   position: relative;
@@ -230,7 +230,7 @@ p {
   z-index: 1;
 }
 
-.fa-face-grin-hearts, .fa-frown {
+/* .fa-face-grin-hearts, .fa-frown {
   position: absolute;
   background-color: #1a1a1a95;
   font-size: 3rem;
@@ -242,7 +242,7 @@ p {
     transform: scale(1.2);
     cursor: pointer;
   }
-}
+} */
 
 .yellowIcon {
   border: 2px solid var(--yellow);
@@ -253,7 +253,7 @@ p {
   color: #909090;
 }
 
-footer {
+/* footer {
   position: relative;
   bottom: 0;
   display: flex;
@@ -296,7 +296,7 @@ footer {
     color: white;
     text-underline-offset: 5px;
   }
-}
+} */
 
 .fa-square-plus,
 .fa-square-minus {
