--- a/56paskaita-03.08-praktika/src/App.css
+++ b/56paskaita-03.08-praktika/src/App.css
@@ -1,48 +1,51 @@
-@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap");
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
+@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css');
 
 :root {
-  --background-color: #1a1a1a;
-  --card-color: #2e2e2e;
-  --red: #950f0d;
-  --yellow: #f9dc01;
+	--background-color: #1a1a1a;
+	--card-color: #2e2e2e;
+	--red: #950f0d;
+	--yellow: #f9dc01;
 }
 
 .yellow {
-  color: var(--yellow);
+	color: var(--yellow);
 }
 .grey {
-  color: grey;
-  font-size: 0.9rem;
+	color: grey;
+	font-size: 0.9rem;
 }
 .red {
-  color: var(--red);
+	color: var(--red);
 }
+
 button {
-  padding: 0.4rem 1rem;
-  background-color: var(--yellow);
-  border: none;
-  margin: 0;
-  color: black;
-  cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  &:hover {
-    background-color: #ffec60;
-    transform: scale(1.1);
-  }
+	padding: 0.4rem 1rem;
+	background-color: var(--yellow);
+	border: none;
+	margin: 0;
+	color: black;
+	cursor: pointer;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	&:hover {
+		background-color: #ffec60;
+		transform: scale(1.1);
+	}
 }
 input[type='submit'] {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    &:hover {
-        background-color: #ffec60;
-        transform: scale(1.1);
-      }
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	&:hover {
+		background-color: #ffec60;
+		transform: scale(1.1);
+	}
 }
 
 body {
-  font-family: "Oswald", sans-serif;
-  background-color: var(--background-color);
+	font-family: 'Oswald', sans-serif;
+	background-color: var(--background-color);
+	position: relative;
+	padding-bottom: 15rem;
 }
 
 /* main {
@@ -89,87 +92,86 @@ body {
 } */
 
 .bandForm {
-  color: white;
-  > form {
-    width: 30rem;
-    margin: 1rem 0;
-    > div {
-      align-self: center;
-    }
-  }
+	color: white;
+	> form {
+		width: 30rem;
+		margin: 1rem 0;
+		> div {
+			align-self: center;
+		}
+	}
 }
 form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  > textarea,
-  input:not([type="submit"]):not([type="radio"]) {
-    padding: 0.5rem;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid white;
-    min-width: 20rem;
-    font-size: 1.2rem;
-    color: white;
-    &:focus {
-      outline: none;
-      border-bottom: 1px solid var(--yellow);
-    }
-  }
-  > textarea {
-    height: 1.6rem;
-  }
-  > div {
-    margin-top: 1rem;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    input[type="radio"] {
-      display: none;
-    }
-    label {
-      cursor: pointer;
-      padding: 0.3rem 1rem;
-      background-color: var(--card-color);
-      color: white;
-      transition: background-color 0.3s ease;
-
-    }
-    input[type="radio"]:checked + label {
-      background-color: var(--yellow);
-      color: black;
-    }
-  }
-  > input[type="submit"] {
-    align-self: center;
-    margin-top: 1rem;
-    padding: 0.4rem 1rem;
-    background-color: var(--yellow);
-    border: none;
-    color: black;
-    cursor: pointer;
-    &:hover {
-      background-color: #ffec60;
-    }
-  }
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	> textarea,
+	input:not([type='submit']):not([type='radio']) {
+		padding: 0.5rem;
+		background-color: transparent;
+		border: none;
+		border-bottom: 1px solid white;
+		min-width: 20rem;
+		font-size: 1.2rem;
+		color: white;
+		&:focus {
+			outline: none;
+			border-bottom: 1px solid var(--yellow);
+		}
+	}
+	> textarea {
+		height: 1.6rem;
+	}
+	> div {
+		margin-top: 1rem;
+		box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+		input[type='radio'] {
+			display: none;
+		}
+		label {
+			cursor: pointer;
+			padding: 0.3rem 1rem;
+			background-color: var(--card-color);
+			color: white;
+			transition: background-color 0.3s ease;
+		}
+		input[type='radio']:checked + label {
+			background-color: var(--yellow);
+			color: black;
+		}
+	}
+	> input[type='submit'] {
+		align-self: center;
+		margin-top: 1rem;
+		padding: 0.4rem 1rem;
+		background-color: var(--yellow);
+		border: none;
+		color: black;
+		cursor: pointer;
+		&:hover {
+			background-color: #ffec60;
+		}
+	}
 }
 
 #editBandForm {
-  color: black;
-  textarea {
-    color:black;
-    border-bottom: 1px solid black;
-  }
-  > h1 {
-    margin-left: 2rem;
-    margin-bottom: 0;
-  }
+	color: black;
+	textarea {
+		color: black;
+		border-bottom: 1px solid black;
+	}
+	> h1 {
+		margin-left: 2rem;
+		margin-bottom: 0;
+	}
 }
 
 .bandCardContainer {
-  margin: 4rem 5%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 3rem;
-  justify-content: space-evenly;
+	margin: 4rem 5% 0;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 3rem;
+	justify-content: space-evenly;
 }
 /* .bandCard {
   box-sizing: border-box;
@@ -208,26 +210,26 @@ form {
   }
 } */
 p {
-  z-index: 5;
-  position: relative;
+	z-index: 5;
+	position: relative;
 }
 .bandInfo {
-  background-color: var(--card-color);
-  position: relative;
+	background-color: var(--card-color);
+	position: relative;
 }
 
 .bandInfo::before {
-  content: "";
-  position: absolute;
-  top: -15px; /* Adjust the slope height */
-  left: 0;
-  right: 0;
-  bottom: 100%;
-  height: 3rem;
-  background: inherit; /* Inherit the background color of the div */
-  transform: skewY(7deg); /* Adjust the angle of the slope */
-  transform-origin: top right;
-  z-index: 1;
+	content: '';
+	position: absolute;
+	top: -15px; /* Adjust the slope height */
+	left: 0;
+	right: 0;
+	bottom: 100%;
+	height: 3rem;
+	background: inherit; /* Inherit the background color of the div */
+	transform: skewY(7deg); /* Adjust the angle of the slope */
+	transform-origin: top right;
+	z-index: 1;
 }
 
 /* .fa-face-grin-hearts, .fa-frown {
@@ -245,12 +247,12 @@ p {
 } */
 
 .yellowIcon {
-  border: 2px solid var(--yellow);
-  color: var(--yellow);
+	border: 2px solid var(--yellow);
+	color: var(--yellow);
 }
 .greyIcon {
-  border: 2px solid #909090;
-  color: #909090;
+	border: 2px solid #909090;
+	color: #909090;
 }
 
 /* footer {
@@ -300,99 +302,99 @@ p {
 
 .fa-square-plus,
 .fa-square-minus {
-  margin-right: 1rem;
+	margin-right: 1rem;
 }
 .iconContainer {
-    display: flex;
-    justify-content: flex-end;
-    gap: 0.5rem;
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
+	display: flex;
+	justify-content: flex-end;
+	gap: 0.5rem;
+	position: absolute;
+	bottom: 1rem;
+	right: 1rem;
 }
 .fa-trash-can {
-  color: white;
-  font-size: 1.3rem;
-  cursor: pointer;
-  &:hover {
-    transform: scale(1.2);
-    color: var(--yellow);
-  }
+	color: white;
+	font-size: 1.3rem;
+	cursor: pointer;
+	&:hover {
+		transform: scale(1.2);
+		color: var(--yellow);
+	}
 }
 .fa-edit {
-    color: white;
-    font-size: 1.3rem;
-    cursor: pointer;
-    &:hover {
-      transform: scale(1.2);
-      color: var(--yellow);
-    }
+	color: white;
+	font-size: 1.3rem;
+	cursor: pointer;
+	&:hover {
+		transform: scale(1.2);
+		color: var(--yellow);
+	}
 }
 .fa-right-from-bracket {
-  font-size: 1.5rem;
-  color: var(--yellow);
-  cursor: pointer;
-  &:hover {
-    color: white;
-  }
+	font-size: 1.5rem;
+	color: var(--yellow);
+	cursor: pointer;
+	&:hover {
+		color: white;
+	}
 }
 
 .fa-user-circle {
-  color: var(--yellow);
-  font-size: 3rem;
+	color: var(--yellow);
+	font-size: 3rem;
 }
 
 dialog {
-  background-color: white;
-  /* position: relative; */
-  form {
-    padding: 2rem;
-    > input:not([type="submit"]) {
-        border-bottom: 1px solid var(--card-color) !important;
-        color: black !important;
-    }
-    > input::placeholder {
-        color: rgb(136, 136, 136);
-    }
-  }
-  i {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 1.5rem;
-    cursor: pointer;
-    &:hover{
-        color: var(--yellow);
-    }
-  }
+	background-color: white;
+	/* position: relative; */
+	form {
+		padding: 2rem;
+		> input:not([type='submit']) {
+			border-bottom: 1px solid var(--card-color) !important;
+			color: black !important;
+		}
+		> input::placeholder {
+			color: rgb(136, 136, 136);
+		}
+	}
+	i {
+		position: absolute;
+		top: 1rem;
+		right: 1rem;
+		font-size: 1.5rem;
+		cursor: pointer;
+		&:hover {
+			color: var(--yellow);
+		}
+	}
 }
 
 .fade-enter {
-  opacity: 0;
+	opacity: 0;
 }
 .fade-enter-active {
-  opacity: 1;
-  transition: opacity 100ms ease-in;
+	opacity: 1;
+	transition: opacity 100ms ease-in;
 }
 .fade-exit {
-  opacity: 1;
+	opacity: 1;
 }
 .fade-exit-active {
-  opacity: 0;
-  transition: opacity 100ms ease-in;
+	opacity: 0;
+	transition: opacity 100ms ease-in;
 }
 
 @keyframes slideInFromLeft {
-  from {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
+	from {
+		transform: translateX(-100%);
+		opacity: 0;
+	}
+	to {
+		transform: translateX(0);
+		opacity: 1;
+	}
 }
 
 .slide-in-left {
-  animation: slideInFromLeft 1s ease-out forwards;
+	animation: slideInFromLeft 1s ease-out forwards;
 }
