--- a/56paskaita-03.08-praktika/src/App.css
+++ b/56paskaita-03.08-praktika/src/App.css
@@ -41,13 +41,26 @@ input[type='submit'] {
 	}
 }
 
-body {
+body,
+html {
 	font-family: 'Oswald', sans-serif;
 	background-color: var(--background-color);
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	min-height: 100vh;
+}
+#root {
+	height: 100%;
+}
+.wrapper {
 	position: relative;
-	padding-bottom: 15rem;
+	min-height: 100%;
 }
 
+main {
+	padding-bottom: 15rem;
+}
 /* main {
   padding: 0 5%;
   > p:first-child {
